# SSH_keylogger

./: .gitignore  CMakeLists.txt  README.md  main.cpp
includes/: config.hpp  constants_spookey.hpp  keylogger.hpp  parsing.hpp  process.hpp  ptrace.hpp  spookey.hhp  spookey.hpp  strace.hpp  tracer.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_catch.cpp
